--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,11 @@
-# Notion API Token
+# Notion Config
 NOTION_API_TOKEN=your_notion_api_token_here
 
 # GitHub API Token
 GITHUB_TOKEN=your_github_token_here
 
+# Memory Bank Config
+MEMORY_BANK_ROOT=/path/to/some/storage
+
 # MCP Configuration
 MCP_HOST=mcpserver.localhost
-
-# Traefik Configuration
-TRAEFIK_DASHBOARD_HOST=traefik.localhost
-
-# MCP Server Hostname
-NOTION_MCP_HOST=notion-mcp.localhost 
