--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@ NOTION_API_TOKEN=your_notion_api_token_here
 # GitHub API Token
 GITHUB_TOKEN=your_github_token_here
 
+# Linear API Token
+LINEAR_API_KEY=your_linear_api_token_here
+
 # Memory Bank Config
 MEMORY_BANK_ROOT=/path/to/some/storage
 
